<resources>
    <string name="app_name">Locket</string>

    <string name="text_username">Username</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_dob">DOB</string>
    <string name="text_continue">Continue</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_welcome">Welcome back</string>
    <string name="text_fill_information">Fill your information</string>
    <string name="text_birthday_question">What\'s your birthday?</string>

    <string name="error_username_empty">Username is empty</string>
    <string name="error_password_empty">Password is empty</string>
    <string name="error_email_empty">Email address is empty</string>
    <string name="error_email_invalid">Email is invalid</string>
    <string name="error_email_taken">Email was already taken</string>
    <string name="error_password_incorrect">Password is incorrect</string>
    <string name="error_username_not_found">That username doesn\'t exist</string>
    <string name="error_username_taken">That username was taken</string>
    <string name="error_password_different">Passwords don\'t match</string>
    <string name="error_birthdate_invalid">Birthdate is invalid</string>
    <string name="error_invalid">Some data is invalid</string>
    <string name="error_unknown">Unknown error has occurred</string>

    <string name="text_back">Back</string>
    <string name="text_new_email">New email address</string>
    <string name="text_edit_info">Edit Info</string>
    <string name="text_change_email">Change email</string>
    <string name="text_add_widget">Add widget</string>
    <string name="text_logout">Logout</string>
    <string name="text_delete_account">Delete account</string>

    <string name="user_avatar" />
    <string name="chat_with_friends">chat_with_friends</string>
    <string name="select_from_album">select_from_album</string>
    <string name="change_camera_selfie">change_camera_selfie</string>
    <string name="no_friends">No Friends</string>
    <string name="no_history">No History</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="send">Send</string>
    <string name="text">text</string>
    <string name="send_message">Send message...</string>
    <string name="date">date</string>
    <string name="poster">poster</string>
    <string name="send_to">Send to...</string>
    <string name="download_button">Download Button</string>
    <string name="gallery_button">Gallery Button</string>
    <string name="capture_button">Capture Button</string>
    <string name="cancel_button">cancel_button</string>

    <string name="text_send">Send</string>
    <string name="text_your_friends">Your friends</string>
    <string name="text_description_sent">Awaiting response...</string>
    <string name="text_description_received">Wants to be your friend</string>
    <string name="text_more">More</string>
    <string name="error_username_invalid">Username is invalid</string>
    <string name="error_already_requested">You already sent a friend request</string>
    <string name="error_self">Silly you!</string>

    <string name="error_google">Can\'t get Google credentials! Are you signed in to your
        device?</string>
</resources>