<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <ImageButton
                android:id="@+id/main_user_avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_corner_full"
                android:contentDescription="@string/user_avatar"
                android:src="@drawable/locket_four"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/message"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?android:attr/windowBackground"
                android:src="@drawable/ic_chat"
                android:textColor="@android:color/white"
                android:scaleType="centerInside"
                android:padding="5dp"
                android:contentDescription="@string/chat_with_friends"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/friends"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/slate"
                android:textColor="@color/white"
                android:text="@string/no_friends"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/main_user_avatar"
                app:layout_constraintEnd_toStartOf="@id/message"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/cameraCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:cardCornerRadius="50dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="1:1">

                <androidx.camera.view.PreviewView
                    android:id="@+id/previewView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <ImageButton
                android:id="@+id/history_screen_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/gallery"
                android:scaleType="centerInside"
                android:gravity="center"
                android:padding="10dp"
                android:contentDescription="@string/select_from_album"
                android:background="?android:attr/windowBackground" />

            <ImageButton
                android:id="@+id/camera_screen_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/circle"
                android:scaleType="centerInside"
                android:gravity="center"
                android:padding="10dp"
                android:contentDescription="@string/take_a_photo"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:background="?android:attr/windowBackground"
                android:textColor="@color/white" />

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/switch_camera"
                android:scaleType="centerInside"
                android:gravity="center"
                android:padding="10dp"
                android:contentDescription="@string/change_camera_selfie"
                android:background="?android:attr/windowBackground"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/history_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:layout_marginBottom="40dp"
            android:backgroundTint="?android:attr/windowBackground"
            android:textColor="?android:attr/textColor"
            android:text="@string/no_history"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>