<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_outer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_slate">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/transparent"
        android:contentDescription="@string/text_back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_edit_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/inter"
            android:text="@string/text_edit_info"
            android:textColor="@color/white"
            android:textFontWeight="800"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_field_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            app:boxBackgroundColor="@color/slate"
            app:boxBackgroundMode="filled"
            app:endIconContentDescription="@string/text_dob"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_edit_info">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:fontFamily="@font/inter"
                android:hint="@string/text_username"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textFontWeight="200" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_field_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@color/slate"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_field_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:fontFamily="@font/inter"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textFontWeight="200" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_field_dob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@color/slate"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:endIconContentDescription="@string/text_dob"
            app:endIconDrawable="@drawable/ic_calendar_month"
            app:endIconMode="custom"
            app:endIconTint="@color/white"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_field_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:hint="@string/text_dob"
                android:inputType="date"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textFontWeight="200" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter"
            android:gravity="end"
            android:textColor="@color/tomato"
            android:textFontWeight="600"
            app:layout_constraintTop_toBottomOf="@id/layout_field_dob" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_continue"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/gold"
            android:fontFamily="@font/inter"
            android:text="@string/text_continue"
            android:textColor="@color/black"
            android:textFontWeight="600"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_arrow_right"
            app:iconGravity="textEnd"
            app:iconTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/text_error" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>